@startuml

title __LABB-1's Class Diagram__\n

  namespace  {
    namespace abb {
      class Labb.Model.AngledFlatbed {
      }
    }
  }
  

  namespace  {
    namespace abb {
      abstract class Labb.Model.Car {
      }
    }
  }
  

  namespace  {
    namespace abb {
      class Labb.CarController {
      }
    }
  }
  

  namespace  {
    namespace abb {
      class Labb.Model.CarFerry {
      }
    }
  }
  

  namespace  {
    namespace abb {
      class Labb.Model.CarTransporter {
      }
    }
  }
  

  namespace  {
    namespace abb {
      class Labb.View.CarView {
      }
    }
  }
  

  namespace  {
    namespace abb {
      enum Direction {
      }
    }
  }
  

  namespace  {
    namespace abb {
      class Labb.View.DrawPanel {
      }
    }
  }
  

  namespace  {
    namespace abb {
      abstract class Labb.Model.Flatbed {
      }
    }
  }
  

  namespace  {
    namespace abb {
      interface Labb.Model.ICanLoadCars {
      }
    }
  }
  

  namespace  {
    namespace abb {
      interface Labb.Model.IMovable {
      }
    }
  }
  

  namespace  {
    namespace abb {
      class Labb.Main {
      }
    }
  }
  

  namespace  {
    namespace abb {
      abstract class Labb.Model.MotorizedVehicle {
      }
    }
  }
  

  namespace  {
    namespace abb {
      class Labb.Model.Saab95 {
      }
    }
  }
  

  namespace  {
    namespace abb {
      class Labb.Model.Scania {
      }
    }
  }
  

  namespace  {
    namespace abb {
      class Labb.Model.StateFlatbed {
      }
    }
  }
  

  namespace  {
    namespace abb {
      abstract class Labb.Model.Truck {
      }
    }
  }
  

  namespace  {
    namespace abb {
      class Labb.Model.Volvo240 {
      }
    }
  }
  

  namespace  {
    namespace abb {
      class Labb.Model.Workshop {
      }
    }
  }
  

  Labb.Model.AngledFlatbed -up-|> Labb.Model.Flatbed
  Labb.Model.Car -up-|> Labb.Model.MotorizedVehicle
  Labb.CarController o-- Labb.View.CarView : frame
  Labb.Model.CarFerry .up.|> Labb.Model.ICanLoadCars
  Labb.Model.CarFerry -up-|> Labb.Model.MotorizedVehicle
  Labb.Model.CarTransporter .up.|> Labb.Model.ICanLoadCars
  Labb.Model.CarTransporter -up-|> Labb.Model.Truck
  Labb.View.CarView -up-|> javax.swing.JFrame
  Labb.View.CarView o-- Labb.CarController : carC
  Labb.View.CarView o-- Labb.View.DrawPanel : drawPanel
  Labb.View.DrawPanel -up-|> javax.swing.JPanel
  Labb.Model.MotorizedVehicle .up.|> Labb.Model.IMovable
  Labb.Model.MotorizedVehicle o-- Labb.Model.ICanLoadCars : carrier
  Labb.Model.MotorizedVehicle o-- Labb.Model.Direction : currentDirection
  Labb.Model.Saab95 -up-|> Labb.Model.Car
  Labb.Model.Scania -up-|> Labb.Model.Truck
  Labb.Model.Scania o-- Labb.Model.Flatbed : flatbed
  Labb.Model.StateFlatbed -up-|> Labb.Model.Flatbed
  Labb.Model.Truck -up-|> Labb.Model.MotorizedVehicle
  Labb.Model.Volvo240 -up-|> Labb.Model.Car
  Labb.Model.Workshop .up.|> Labb.Model.ICanLoadCars


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
